Fixed admin drop being covered by page editor

--- a/trunk/mintypublish/themes/default/css/screen.css
+++ b/trunk/mintypublish/themes/default/css/screen.css
@@ -220,6 +220,7 @@ select
 	width:176px;
 	padding:8px;
 	font-size:11px;
+	z-index:2;
 }
 
 #admin .drop .list
